--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "^4.0.7",
+    "actioncable-vue": "^1.4.2",
     "axios": "^0.19.0",
     "humps": "^2.0.1",
     "turbolinks": "^5.2.0",
